# onebot_v11_oxidebot

./: Cargo.toml  Readme.md
src/: event.rs  lib.rs  segment.rs
src/bot/: mod.rs  ws.rs  ws_reverse.rs
